--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,13 +43,13 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
 
-    # try auto build action
-    #  - name: Autobuild
-    #    uses: github/codeql-action/autobuild@v1
-    - name: Build image
-      run: |
-        chmod +x gradlew
-        ./gradlew --no-daemon clean
+#     try auto build action
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
+#     - name: Build image
+#       run: |
+#         chmod +x gradlew
+#         ./gradlew --no-daemon clean
       
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
