--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,8 +46,8 @@ jobs:
 #     try auto build action
 #     - name: Autobuild
 #       uses: github/codeql-action/autobuild@v1
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+#     - name: Setup Gradle
+#       uses: gradle/gradle-build-action@v2
       
     - name: Build image
       run: |
